# AttaCore

./: .gitignore  Cargo.toml  README.md
.claude/skills/atta-analyze-requirements/: SKILL.md
.claude/skills/atta-bug-fix/: SKILL.md
.claude/skills/atta-compare/: SKILL.md
.claude/skills/atta-describe-problem/: SKILL.md
.claude/skills/atta-design-architecture/: SKILL.md
.claude/skills/atta-design-fix/: SKILL.md
.claude/skills/atta-feature-dev/: SKILL.md
.claude/skills/atta-help/: SKILL.md
.claude/skills/atta-implement/: SKILL.md
crates/auth/: Cargo.toml
crates/auth/src/: callback.rs  client.rs  lib.rs  pkce.rs  provider.rs  store.rs
crates/compaction/: Cargo.toml
crates/compaction/src/: cached.rs  cleanup.rs  compact.rs  grouping.rs  lib.rs  reactive.rs  session_memory.rs  time_based_mc.rs
crates/core/: Cargo.toml
crates/core/src/: features.rs  id.rs  intent.rs  lib.rs  log.rs  memory.rs  message.rs  path.rs  paths.rs  permission.rs  provider.rs  result.rs  rpc.rs  session.rs  summary.rs  tool.rs
crates/core/src/context/: config.rs  mod.rs  prompt.rs  session.rs  task.rs
crates/core/src/error/: code.rs  mod.rs
crates/core/src/frozen/: frontmatter.rs  git.rs  memory.rs  mod.rs  regex.rs  skill.rs  utils.rs
crates/core/src/interface/: agent_spawner.rs  event.rs  memory.rs  mod.rs  model.rs  permission.rs  prompt.rs  scene.rs  settings.rs
crates/history/: Cargo.toml
crates/history/src/: entry.rs  error.rs  lib.rs  path.rs  project.rs  store.rs  transcript.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: config.rs  lib.rs  payload.rs  watcher.rs
crates/hooks/src/runner/: executor.rs  matcher.rs  mod.rs  ssrf.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: adapter.rs  client.rs  config.rs  connect.rs  error.rs  lib.rs  manager.rs  oauth.rs  output_cache.rs  registry.rs  tools.rs
crates/model/: Cargo.toml
crates/model/src/: adapter.rs  client.rs  error.rs  lib.rs  mock.rs  parser.rs  registry.rs  router.rs  stream.rs  tokens.rs  types.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: dangerous.rs  error.rs  gate.rs  lib.rs  llm_classifier.rs  path_safety.rs  rule.rs  ruleset.rs  settings_patch.rs  shadow.rs  yolo.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: agent_registry.rs  bundled.rs  cache.rs  cli.rs  homograph.rs  lib.rs  manifest.rs  marketplace.rs  resolver.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent.rs  agent_spawner_impl.rs  agent_tool.prompt.md  agent_tool.rs  commands.rs  context.rs  dispatch.rs  lib.rs  request.rs  streaming.rs  turn.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs
crates/scene/src/coding/: config.rs  context.rs  escalation.rs  mod.rs  policy.rs  prompt.rs  task.rs  tier.rs  verify.rs
crates/scene/src/scene/: chat.rs  coding.rs  demo.rs  mod.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  session.rs  session_memory.rs
crates/skills/: Cargo.toml
crates/skills/src/: bundled.rs  lib.rs  manager.rs  mcp_builder.rs  watcher.rs
crates/task/: Cargo.toml
crates/task/src/: delete.rs  dream.rs  lib.rs  running.rs  store.rs
crates/team/: Cargo.toml
crates/team/src/: coordinator.rs  lib.rs  mailbox.rs  polling.rs  prompt.rs  protocol.rs  remote_agent.rs  team_memory.rs  tool.prompt.md  tool.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  cost.rs  env_metadata.rs  feature_flags.rs  file_recorder.rs  first_party.rs  handle.rs  lib.rs  otel.rs  perf.rs  redact.rs  remote.rs  spawn.rs  stats.rs  vcr.rs
crates/telemetry/src/events/: mcp.rs  mod.rs  model.rs  session.rs  team.rs  tool.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent_tool.prompt.md  agent_tool.rs  aliases.rs  ask_user.rs  bash.rs  cancel.rs  config.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  lsp.rs  monitor.rs  native_search.rs  notebook_edit.rs  ping.rs  plan_mode.rs  plan_verify.rs  push_notification.rs  remote_trigger.rs  saas_stubs.rs  schedule_wakeup.rs  secondary_llm.rs  security.rs  skill_tool.rs  sleep.rs  structured_output.rs  task_output.rs  task_stop.rs  tasks.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs  worktree_tools.rs
crates/tools/src/bash/: safety.rs  sandbox.rs  sed_validate.rs
crates/tools/src/cron/: create.rs  delete.rs  list.rs  mod.rs  parser.rs  store.rs
crates/tools/src/prompts/coding/: agent.prompt.md  ask_user.prompt.md  bash.prompt.md  cron_create.prompt.md  cron_delete.prompt.md  cron_list.prompt.md  file_edit.prompt.md  file_read.prompt.md  file_write.prompt.md  glob.prompt.md  grep.prompt.md  lsp.prompt.md  monitor.prompt.md  notebook_edit.prompt.md  ping.prompt.md  plan_mode.enter.prompt.md  push_notification.prompt.md  remote_trigger.prompt.md  schedule_wakeup.prompt.md  skill.prompt.md  skill_tool.prompt.md  sleep.prompt.md  structured_output.prompt.md  task_create.prompt.md  task_get.prompt.md  task_list.prompt.md  task_output.prompt.md  task_stop.prompt.md  task_update.prompt.md  todo_write.prompt.md  tool_search.prompt.md  web_search.prompt.md  worktree_enter.prompt.md  worktree_exit.prompt.md
daemon/: Cargo.toml
daemon/src/: config.rs  discovery.rs  lib.rs  main.rs  rpc.rs  server.rs  session_manager.rs  session_pool.rs
daemon/tests/: daemon_e2e.rs  rpc_smoke.rs  vcr_agent_integration_test.rs
docs/: ALIGNMENT_AUDIT_2025-06-14.md  ALIGNMENT_AUDIT_2026-06-14-v2.md  ALIGNMENT_AUDIT_COMPREHENSIVE_2026-06-21.md  ALIGNMENT_AUDIT_CURRENT_2026-06-17.md  ALIGNMENT_AUDIT_FINAL_2026-06-15.md  ALIGNMENT_AUDIT_FULL_2026-06-17.md  ALIGNMENT_AUDIT_VERIFY_2026-06-17.md  CHANGELOG_v2.0.0.md  DAEMON_DEV_GUIDE.md  DEV_GUIDE.md  LIBRARY_DEV_GUIDE.md  README.md  README.zh.md  TESTING_STRATEGY.md
docs/audit/: alignment-audit-agent-2026-06-13-v2.md  alignment-audit-agent-2026-06-13.md
tests/: README.md  run_api.sh  run_cli.sh
tests/cases/: 000.c_project.test  001.smoke.test
tests/fixtures/vcr/: convert.py
tests/runner/: Cargo.toml
tests/runner/src/: api_runner.rs  cli_runner.rs  comparator.rs  main.rs  reporter.rs  script.rs
tests/scripts/: convert.py
(+9 files in other folders)
