[package]
name = "auth"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — OAuth 2.0 PKCE client"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
url           = { workspace = true }
time          = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
base64        = { workspace = true }
rand          = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
