[package]
name = "compaction"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — context compaction (message grouping, cleanup, caching)"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
async-trait   = { workspace = true }
tracing       = { workspace = true }
futures       = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
