[package]
name = "history"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — JSONL session persistence"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
time          = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
