[package]
name = "hooks"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — lifecycle hook runner"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
reqwest       = { workspace = true }
globset       = { workspace = true }
notify        = { workspace = true }
