[package]
name = "mcp"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — MCP client (server connection, tool adaptation)"

[dependencies]
base          = { workspace = true }
auth          = { workspace = true }
rmcp          = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
futures       = { workspace = true }
async-trait   = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
schemars      = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
url           = { workspace = true }
globset       = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
