[package]
name = "permissions"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — permission engine (rule matching, mode dispatch, path safety)"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
globset       = { workspace = true }
tracing       = { workspace = true }
futures       = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
unicode-normalization = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
