[package]
name = "scene"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — built-in agent scene implementations (coding, demo)"

[dependencies]
base          = { workspace = true }
serde_json    = { workspace = true }

