[package]
name = "skills"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — skill manager + bundled skills"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
walkdir       = { workspace = true }
toml          = { workspace = true }
notify        = { workspace = true }
globset       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
