[package]
name = "task"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — background task lifecycle management"

[dependencies]
base          = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
time          = { workspace = true }

schemars = { workspace = true }
