[package]
name = "team"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — multi-agent team coordination (Coordinator, TeamTool, mailbox)"

[dependencies]
base          = { workspace = true }
tools         = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
