[package]
name = "tools"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "AttaCore — built-in tool implementations"

[dependencies]
base          = { workspace = true }
model         = { workspace = true }
mcp           = { workspace = true }
permissions   = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
futures       = { workspace = true }
async-trait   = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
schemars      = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
regex         = { workspace = true }
glob          = { workspace = true }
globset       = { workspace = true }
html2text     = { workspace = true }
which         = { workspace = true }
url           = { workspace = true }
ignore        = { workspace = true }
similar       = { workspace = true }
base64        = { workspace = true }
time = { workspace = true }
skills = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
