[package]
name = "test-runner"
version = "0.1.0"
edition.workspace = true
publish = false
description = "AttaCore test runner — executes .test scenario files against Agent API or Daemon"

[[bin]]
name = "attacore-test"
path = "src/main.rs"

[dependencies]
base          = { workspace = true }
runtime       = { workspace = true }
model         = { workspace = true }
scene         = { workspace = true }
telemetry     = { workspace = true }
tools         = { workspace = true }
mcp           = { workspace = true }
permissions   = { workspace = true }
skills        = { workspace = true }
compaction    = { workspace = true }
tokio         = { workspace = true, features = ["full"] }
tokio-util    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
anyhow        = { workspace = true }
url           = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
clap          = { version = "4", features = ["derive"] }
shellexpand   = "3"
